--- a/d/download-center/kraketinternet.html
+++ b/d/download-center/kraketinternet.html
@@ -106,7 +106,10 @@
 
         <!-- Direktlink zum Google Drive Download -->
         <a class="download-btn" href="https://drive.google.com/uc?export=download&id=1qbnXs9iHrGoTh84yXtp_iD4ZPecwXeUG" download>
-            ⬇ Jetzt herunterladen
+            ⬇ Jetzt herunterladen (Nur mit Google Konto über Drive)
+        </a>
+        <a class="download-btn" href="/" download>
+            ⬇ Jetzt herunterladen (schnell via Jotform)
         </a>
     </div>
 
