--- a/d/download-center/kraketinternet.html
+++ b/d/download-center/kraketinternet.html
@@ -108,7 +108,7 @@
         <a class="download-btn" href="https://drive.google.com/uc?export=download&id=1qbnXs9iHrGoTh84yXtp_iD4ZPecwXeUG" download>
             ⬇ Jetzt herunterladen (Nur mit Google Konto über Drive)
         </a>
-        <a class="download-btn" href="/" download>
+        <a class="button" href="https://eu.jotform.com/de/app/253201876402350" download>
             ⬇ Jetzt herunterladen (schnell via Jotform)
         </a>
     </div>
