--- a/s/index.html
+++ b/s/index.html
@@ -108,7 +108,73 @@
       <h1>Willkommen bei Aeropus</h1>
 <p>Ob Texte schreiben und teilen bei Mini-Word, oder aber mit Stolz deine eigenen Dokumente gestalten – bei Aeropus bist du der Autor deiner Ideen.</p>
     </section>
-    <section id="projekte">
+    <section id="projekte" class="section">
+    </section>
+    <div id="mini-office" class="section">
+  <h2>Mini-Office Programme kennenlernen</h2>
+  <p>Mit Mini-Calc erhältst du einen leistungsstarken wissenschaftlichen Taschenrechner, der speziell für dein Gerät entwickelt wurde. Er bietet dir eine Vielzahl an Funktionen wie trigonometrische Berechnungen, Logarithmen und Potenzen, die weit über die Grundrechenarten hinausgehen. So kannst du komplexe mathematische Aufgaben schnell und präzise lösen, egal ob für Schule, Studium oder Beruf. Dank der benutzerfreundlichen Oberfläche ist die Bedienung intuitiv und effizient, was dir viel Zeit spart.</p>
+</div>
+
+<div id="mini-codepad" class="section">
+  <h2>Mini-CodePad</h2>
+  <p>In Mini-CodePad kannst du verschiedene Programmiersprachen nutzen, um deine eigenen Projekte zu entwickeln und zu testen. Dazu gehören JavaScript, HTML und Powershell. JavaScript eignet sich hervorragend für interaktive Webseiten, HTML definiert die Struktur und Powershell automatisiert Windows-Aufgaben.</p>
+</div>
+
+<div id="mini-diamap" class="section">
+  <h2>Mini-Diamap</h2>
+  <p>Mit Mini-Diamap kannst du Mindmaps und Diagramme erstellen und als Bilddateien speichern – ideal für Präsentationen, Berichte oder Webseiten.</p>
+</div>
+
+<div id="mini-form" class="section">
+  <h2>Mini-Form</h2>
+  <p>In Mini-Form erstellst du Formulare, füllst sie direkt digital aus und sparst Zeit bei Anmeldungen, Bestellungen oder Umfragen.</p>
+</div>
+
+<div id="mini-gallery" class="section">
+  <h2>Mini-Gallery</h2>
+  <p>Die Mini-Gallery zeigt deine ausgewählten oder hochgeladenen Fotos in einer übersichtlichen Miniaturansicht an – perfekt für kleine Bildsammlungen.</p>
+</div>
+
+<div id="mini-kalender" class="section">
+  <h2>Mini-Kalender</h2>
+  <p>Plane Termine, Geburtstage und Ereignisse wie ein Profi und behalte alles im Überblick – ideal für Alltag, Büro und Schule.</p>
+</div>
+
+<div id="mini-mailer" class="section">
+  <h2>Mini-Mailer</h2>
+  <p>Schreibe E-Mails offline und verschicke sie später, sobald du wieder online bist – perfekt bei schlechter oder fehlender Internetverbindung.</p>
+</div>
+
+<div id="mini-note" class="section">
+  <h2>Mini-Note</h2>
+  <p>Erstelle digitale Notizzettel in verschiedenen Farben und Schriftarten, speichere sie und rufe sie jederzeit ab – ganz ohne Papier.</p>
+</div>
+
+<div id="mini-praesentator" class="section">
+  <h2>Mini-Präsentator</h2>
+  <p>Erstelle Präsentationen kostenlos und direkt im HTML-Format – ohne PowerPoint, einfach im Browser abrufbar.</p>
+</div>
+
+<div id="mini-startseite" class="section">
+  <h2>Mini-Startseite</h2>
+  <p>Dein persönliches Dashboard begrüßt dich 24/7 und bietet schnellen Zugriff auf alle wichtigen Funktionen.</p>
+</div>
+
+<div id="mini-table" class="section">
+  <h2>Mini-Table</h2>
+  <p>Berechne Fußballergebnisse, Notenschnitte und vieles mehr. Mit drei Spalten und 75 Zeilen hast du viel Platz für Daten.</p>
+</div>
+
+<div id="mini-uhr" class="section">
+  <h2>Mini-Uhr</h2>
+  <p>Behalte die Zeit im Blick und nutze den lautlosen Wecker zum konzentrierten Arbeiten oder Lernen.</p>
+</div>
+
+<div id="mini-word" class="section">
+  <h2>Mini-Word</h2>
+  <p>Mini-Word bietet anpassbare Schriftarten, Hervorhebungen, einen großen Schreibbereich und Speicheroptionen wie .txt und .pdf – kompakt und nur 15,4 MB groß.</p>
+</div>
+
   </main>
 
   <script>
