--- a/s/index.html
+++ b/s/index.html
@@ -5,10 +5,16 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Aeropus – Startseite</title>
   <style>
+@font-face {
+  font-family: "AeropusUIIII";
+  src: url("g/assets/fonts/AeropusUIII-Regular.otf") format("opentype");
+  font-weight: normal;
+  font-style: normal;
+}
     body {
       margin: 0;
-      font-family: Arial, sans-serif;
-      background: #f4f4f4;
+      font-family: "AeropusUIIII", sans-serif;
+      background: #ffffff;
     }
 
     /* Obere Leiste fixiert */
