--- a/s/index.html
+++ b/s/index.html
@@ -116,9 +116,12 @@
     </section>
     <section id="projekte" class="section">
     </section>
-    <div id="mini-office" class="section">
+    <section id="mini-office" class="section">
   <h2>Mini-Office Programme kennenlernen</h2>
-  <p>Mit Mini-Calc erhältst du einen leistungsstarken wissenschaftlichen Taschenrechner, der speziell für dein Gerät entwickelt wurde. Er bietet dir eine Vielzahl an Funktionen wie trigonometrische Berechnungen, Logarithmen und Potenzen, die weit über die Grundrechenarten hinausgehen. So kannst du komplexe mathematische Aufgaben schnell und präzise lösen, egal ob für Schule, Studium oder Beruf. Dank der benutzerfreundlichen Oberfläche ist die Bedienung intuitiv und effizient, was dir viel Zeit spart.</p>
+      
+    <div id="mini-office" class="section">
+        <h2>Mini-Calc</h2>
+      <p>Mit Mini-Calc erhältst du einen leistungsstarken wissenschaftlichen Taschenrechner, der speziell für dein Gerät entwickelt wurde. Er bietet dir eine Vielzahl an Funktionen wie trigonometrische Berechnungen, Logarithmen und Potenzen, die weit über die Grundrechenarten hinausgehen. So kannst du komplexe mathematische Aufgaben schnell und präzise lösen, egal ob für Schule, Studium oder Beruf. Dank der benutzerfreundlichen Oberfläche ist die Bedienung intuitiv und effizient, was dir viel Zeit spart.</p>
 </div>
 
 <div id="mini-codepad" class="section">
@@ -180,6 +183,7 @@
   <h2>Mini-Word</h2>
   <p>Mini-Word bietet anpassbare Schriftarten, Hervorhebungen, einen großen Schreibbereich und Speicheroptionen wie .txt und .pdf – kompakt und nur 15,4 MB groß.</p>
 </div>
+    </section>
 
   </main>
 
