--- a/s/index.html
+++ b/s/index.html
@@ -107,6 +107,7 @@
     <a href="/d/download-center/index.html">Aeropus Downloadcenter</a>
     <a href="https://dasfohlen1900.github.io/seite1.html">Mini-Office</a>
     <a href="https://dasfohlen1900.github.io/license/">Octopus License Information</a>
+    <a href="https://dasfohlen1900.github.io/rider/">Geometry Rider</a>
   </nav>
 
   <main>
