--- a/p/index.html
+++ b/p/index.html
@@ -11,7 +11,18 @@
       font-weight: 400;
       font-style: normal;
     }
-
+  button {
+    background: linear-gradient(135deg, #6a11cb, #2575fc); /* schöner Farbverlauf */
+    color: white;
+    font-size: 16px;
+    font-weight: bold;
+    padding: 12px 25px;
+    border: none;
+    border-radius: 12px;
+    cursor: pointer;
+    box-shadow: 0 4px 15px rgba(0,0,0,0.2);
+    transition: all 0.3s ease;
+  }
     body {
         font-family: 'Aeropus UI II'; Arial, sans-serif;
         background: #f4f4f4;
@@ -252,6 +263,16 @@
             <td><span class="color-swatch ObsidianLuxe"></span><span class="color-swatch MoonstoneSilver"></span><span class="color-swatch EmeraldApex"></span></td>
         </tr>
 
+    </table>
+    <table>
+        <tr>
+            <td>Dein AeroPhone kommt mit...</td>
+        </tr>
+        <tr>
+            <td>Aerophone II/II Pro/II Premium</td>
+            <td>USB-C auf USB Kabel (1,5m)</td>
+            <td>SIM-Pin</td>
+        </tr>
     </table>
 </div>
 <div>
