--- a/p/index.html
+++ b/p/index.html
@@ -11,7 +11,7 @@
       font-weight: 400;
       font-style: normal;
     }
-  button {
+  .button {
     background: linear-gradient(135deg, #6a11cb, #2575fc); /* schöner Farbverlauf */
     color: white;
     font-size: 16px;
@@ -277,6 +277,7 @@
 </div>
 <div>
   <a class="button" href="buy.html">Jetzt kaufän</a>
+  <a class="button" href="support.html">Nicht sicher?</a>  
 </div>
 <footer>
     &copy; 2025 Aeropus – Alle Rechte vorbehalten
