--- a/s/index.html
+++ b/s/index.html
@@ -108,7 +108,7 @@
     <a href="https://dasfohlen1900.github.io/seite1.html">Mini-Office</a>
     <a href="https://dasfohlen1900.github.io/license/">Octopus License Information</a>
     <a href="https://dasfohlen1900.github.io/rider/">Geometry Rider</a>
-    <a href="https://aeropus.vercel.github.io/index.html?aeropus/">AeropusStore (Demo)</a>
+    <a href="https://aeropus.vercel.app/index.html?aeropus/">AeropusStore (Demo)</a>
   </nav>
 
   <main>
